Fix ProfileButton clashing with other sidebar elements on small height sreeens due to absolute positioning

--- a/src/Sidebar/ProfileButton/ProfileButton.module.scss
+++ b/src/Sidebar/ProfileButton/ProfileButton.module.scss
@@ -5,6 +5,7 @@
   @include media.multi(mobile, tablet, pc-small) {
     width: 100%;
     height: 100%;
+    min-height: 5rem;
     position: relative;
   }
 
